--- a/Expedia/Extent-Report/ExtentReport.html
+++ b/Expedia/Extent-Report/ExtentReport.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2019-10-08 18:04:14</span>
+					<span class='suite-started-time'>2019-10-09 17:55:10</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 1m 12s+870ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 44s+738ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 1m 12s+870ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 44s+738ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2019-10-08 18:03:02</span> 
+							<span class='panel-lead suite-started-time'>2019-10-09 17:54:26</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2019-10-08 18:04:14</span> 
+							<span class='panel-lead suite-ended-time'>2019-10-09 17:55:10</span> 
 						</div> 
 					</div>
 				</div>
@@ -209,7 +209,7 @@
 									<tbody>
 											<tr>
 												<td>
-													AccountTest
+													SupportTest
 												</td>
 											</tr>
 									</tbody>
@@ -245,7 +245,7 @@
 										<i class='mdi-maps-local-offer'></i>
 									</a>
 									<ul id='category-toggle' class='dropdown-content'>
-											<li class='AccountTest'><a href='#!'>AccountTest</a></li>
+											<li class='SupportTest'><a href='#!'>SupportTest</a></li>
 										<li class='divider'></li>
 										<li class='clear'><a href='#!'>Clear Filters</a></li>
 									</ul>
@@ -277,22 +277,22 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='72e3cfa0-596d-4ea9-86d0-7e435abc935c'>
+										<li class='collection-item test displayed active pass ' extentid='1adfd9c8-8b6e-4c96-8238-78845da90eab'>
 											<div class='test-head'>
-												<span class='test-name'>clickOnAccount </span>
+												<span class='test-name'>clickOnCustomerService </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  accounttest'></span>
+												<span class='category-assigned hide  supporttest'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-10-08 18:03:21</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-10-08 18:03:37</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 16s+554ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-10-09 17:54:48</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-10-09 17:54:54</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 5s+524ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
 														<div class='categories'>
-																<span class='category text-white'>AccountTest</span>
+																<span class='category text-white'>SupportTest</span>
 														</div>
 												</div>
 												<div class='test-steps'>
@@ -307,12 +307,12 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:03:32</td>
-																	<td class='step-details'>click on account<br></td>
+																	<td class='timestamp'>17:54:54</td>
+																	<td class='step-details'>clicked on customer service<br></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:03:37</td>
+																	<td class='timestamp'>17:54:54</td>
 																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
@@ -322,22 +322,22 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='aaa58517-a7ac-4f57-8e7d-7dd428ccb5f1'>
+										<li class='collection-item test displayed active pass ' extentid='853481ce-2cc5-43e4-90a4-13c0b14d4c29'>
 											<div class='test-head'>
-												<span class='test-name'>createAnAccount </span>
+												<span class='test-name'>clickOnFeedBack </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  accounttest'></span>
+												<span class='category-assigned hide  supporttest'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-10-08 18:03:50</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-10-08 18:04:14</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 24s+287ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-10-09 17:55:06</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-10-09 17:55:10</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 3s+588ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
 														<div class='categories'>
-																<span class='category text-white'>AccountTest</span>
+																<span class='category text-white'>SupportTest</span>
 														</div>
 												</div>
 												<div class='test-steps'>
@@ -351,8 +351,13 @@
 														</thead>
 														<tbody>
 																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>17:55:10</td>
+																	<td class='step-details'>clicked on feedback<br></td>
+																</tr>
+																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:04:14</td>
+																	<td class='timestamp'>17:55:10</td>
 																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
@@ -411,7 +416,7 @@
 									<ul id='cat-collection' class='cat-collection'>
 											<li class='category-item displayed'>
 												<div class='cat-head'>
-													<span class='category-name'>AccountTest</span>
+													<span class='category-name'>SupportTest</span>
 												</div>
 												<div class='category-status-counts'>
 														<span class='pass label dot'>Pass: 2</span>
@@ -435,13 +440,13 @@
 															</thead>
 															<tbody>
 																	<tr class='pass'>
-																		<td>2019-10-08 18:03:21</td>
-																		<td><span class='category-link linked' extentid='72e3cfa0-596d-4ea9-86d0-7e435abc935c'>clickOnAccount</span></td>
+																		<td>2019-10-09 17:54:48</td>
+																		<td><span class='category-link linked' extentid='1adfd9c8-8b6e-4c96-8238-78845da90eab'>clickOnCustomerService</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 																	<tr class='pass'>
-																		<td>2019-10-08 18:03:50</td>
-																		<td><span class='category-link linked' extentid='aaa58517-a7ac-4f57-8e7d-7dd428ccb5f1'>createAnAccount</span></td>
+																		<td>2019-10-09 17:55:06</td>
+																		<td><span class='category-link linked' extentid='853481ce-2cc5-43e4-90a4-13c0b14d4c29'>clickOnFeedBack</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
