--- a/Expedia/Extent-Report/ExtentReport.html
+++ b/Expedia/Extent-Report/ExtentReport.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2019-10-16 22:58:39</span>
+					<span class='suite-started-time'>2019-10-22 22:13:48</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 17s+281ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 22s+168ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 17s+281ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 22s+168ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2019-10-16 22:58:21</span> 
+							<span class='panel-lead suite-started-time'>2019-10-22 22:13:26</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2019-10-16 22:58:39</span> 
+							<span class='panel-lead suite-ended-time'>2019-10-22 22:13:48</span> 
 						</div> 
 					</div>
 				</div>
@@ -277,7 +277,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active fail ' extentid='62699ee8-f120-4af5-ad11-6b6d4ea46a6a'>
+										<li class='collection-item test displayed active fail ' extentid='726b1715-859f-4c76-8526-c414de7cd26a'>
 											<div class='test-head'>
 												<span class='test-name'>Validation </span>
 												<span class='test-status label right outline capitalize fail'>fail</span>
@@ -285,9 +285,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-10-16 22:58:35</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-10-16 22:58:35</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+0ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-10-22 22:13:43</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-10-22 22:13:43</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+4ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -307,7 +307,7 @@
 														<tbody>
 																<tr>
 																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>22:58:35</td>
+																	<td class='timestamp'>22:13:43</td>
 																	<td class='step-details'>java.lang.NullPointerException
 	at POM.HomePagePOM.ValidateContactClickAble(HomePagePOM.java:18)
 	at homepageTest.HomePagePOMTest.Validation(HomePagePOMTest.java:10)
@@ -333,8 +333,13 @@
 	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
 	at org.testng.TestNG.runSuites(TestNG.java:1049)
 	at org.testng.TestNG.run(TestNG.java:1017)
-	at org.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:73)
-	at org.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:123)</td>
+	at org.apache.maven.surefire.testng.TestNGExecutor.run(TestNGExecutor.java:283)
+	at org.apache.maven.surefire.testng.TestNGXmlTestSuite.execute(TestNGXmlTestSuite.java:75)
+	at org.apache.maven.surefire.testng.TestNGProvider.invoke(TestNGProvider.java:120)
+	at org.apache.maven.surefire.booter.ForkedBooter.invokeProviderInSameClassLoader(ForkedBooter.java:384)
+	at org.apache.maven.surefire.booter.ForkedBooter.runSuitesInProcess(ForkedBooter.java:345)
+	at org.apache.maven.surefire.booter.ForkedBooter.execute(ForkedBooter.java:126)
+	at org.apache.maven.surefire.booter.ForkedBooter.main(ForkedBooter.java:418)</td>
 																</tr>
 														</tbody>
 													</table>
@@ -416,8 +421,8 @@
 															</thead>
 															<tbody>
 																	<tr class='fail'>
-																		<td>2019-10-16 22:58:35</td>
-																		<td><span class='category-link linked' extentid='62699ee8-f120-4af5-ad11-6b6d4ea46a6a'>Validation</span></td>
+																		<td>2019-10-22 22:13:43</td>
+																		<td><span class='category-link linked' extentid='726b1715-859f-4c76-8526-c414de7cd26a'>Validation</span></td>
 																		<td><div class='status label capitalize fail'>fail</div></td>
 																	</tr>
 															<tbody>
